--- a/src/global/theme.scss
+++ b/src/global/theme.scss
@@ -1,5 +1,6 @@
 $acc-clr-1: #8a5c5d;
 $acc-clr-2: #714849;
+$acc-clr-3: #e6a459;
 
 $dark-clr-1: #3d3d3d;
 
@@ -11,7 +12,7 @@ $cell-clr-2: #c69b6b;
 
 $stripe-scale: 6rem;
 $stripe-color: #f1ddc6;
-$checker-scale: 3rem;
+$checker-scale: 6rem;
 
 @font-face {
   font-family: "ConcertOne";
@@ -25,6 +26,10 @@ $checker-scale: 3rem;
   margin: 0;
   box-sizing: border-box;
   font-family: "ConcertOne", sans-serif;
+}
+
+body {
+  overflow: hidden;
 }
 
 @mixin checkered {
@@ -58,8 +63,8 @@ $checker-scale: 3rem;
       transparent 100%
     );
 
-  background-size: $stripe-scale $stripe-scale;
-  background-position: $stripe-scale $stripe-scale;
+  background-size: $checker-scale $checker-scale;
+  background-position: $checker-scale $checker-scale;
 }
 
 @mixin movingStripes {
@@ -99,6 +104,16 @@ button {
 
   &:active {
     animation: strongShake 0.1s;
+  }
+
+  &:disabled {
+    color: gray;
+    cursor: not-allowed;
+
+    &:hover,
+    &:active {
+      animation: none;
+    }
   }
 }
 
