Knight moves now lol

--- a/src/pages/Game/Piece.module.scss
+++ b/src/pages/Game/Piece.module.scss
@@ -1,5 +1,5 @@
 .piece {
-  position: relative;
+  position: absolute;
   width: calc(theme.$grid-scale / 8);
   height: calc(theme.$grid-scale / 8);
   transition: all 0.2s;
