--- a/src/pages/Game/GridCell.module.scss
+++ b/src/pages/Game/GridCell.module.scss
@@ -1,3 +1,8 @@
+.evenGridCell,
+.oddGridCell {
+  box-shadow: inset 0 0 2vmin rgba(0, 0, 0, 0.1);
+}
+
 .evenGridCell {
   background-color: theme.$cell-clr-1;
 }
