--- a/src/pages/Game/Piece.module.scss
+++ b/src/pages/Game/Piece.module.scss
@@ -7,7 +7,8 @@
 
 .jumpReference,
 .danceReference,
-.jiggleReference {
+.jiggleReference,
+.celebrateReference {
   width: 100%;
   height: 100%;
   position: relative;
@@ -15,14 +16,23 @@
   left: 0;
 }
 
-.danceReference {
+.danceReference,
+.jiggleReference,
+.celebrateReference {
   transform-origin: 50% 80%;
+}
+
+.danceReference {
   animation: dance 1s infinite;
 }
 
 .jiggleReference {
-  transform-origin: 50% 80%;
   animation: jiggle 0.4s infinite;
+}
+
+.celebrateReference {
+  animation: celebrate 0.2s infinite;
+  // animation: celebrate 5s infinite;
 }
 
 .jumping {
@@ -57,7 +67,7 @@
   0%,
   25%,
   100% {
-    transform: scaleY(1);
+    transform: scaleY(1.05) scaleX(0.95);
   }
 
   50%,
@@ -65,3 +75,63 @@
     transform: scaleY(0.9) scaleX(1.1);
   }
 }
+
+@keyframes celebrate {
+  0%,
+  25%,
+  100% {
+    transform: scaleY(1) scaleX(1);
+  }
+
+  50%,
+  75% {
+    transform: scaleY(0.9) scaleX(1.1);
+  }
+}
+
+// @keyframes celebrate {
+//   10%,
+//   20%,
+//   30%,
+//   40%,
+//   50%,
+//   60%,
+//   70%,
+//   80% {
+//     transform: scaleY(1.1) scaleX(0.9);
+//   }
+
+//   0%,
+//   5%,
+//   15%,
+//   25%,
+//   35%,
+//   45%,
+//   55%,
+//   65%,
+//   75% {
+//     transform: scaleY(0.9) scaleX(1.1);
+//   }
+
+//   0%,
+//   80%,
+//   100% {
+//     transform: scaleY(0.9) scaleX(1.1);
+//     bottom: 0;
+//   }
+
+//   // 100% {
+//   //   transform: scaleY(1) scaleX(1);
+//   // }
+
+//   87%,
+//   93% {
+//     bottom: 3vmin;
+//   }
+//   87% {
+//     transform: scaleY(1.1) scaleX(0.9);
+//   }
+//   93% {
+//     transform: scaleY(1) scaleX(1);
+//   }
+// }
