--- a/src/pages/Game/GridCellWarning.module.scss
+++ b/src/pages/Game/GridCellWarning.module.scss
@@ -1,7 +1,10 @@
 .gridCellWarning {
   width: 80%;
   height: 80%;
-  transform: translate(10%, 10%);
+  // width: 100%;
+  // height: 100%;
+  // transform: translate(0%, 0%);
+  transform: translate(12%, 12%);
   // animation: blink 1s linear infinite;
 }
 
