--- a/src/pages/MainMenu/MainMenu.module.scss
+++ b/src/pages/MainMenu/MainMenu.module.scss
@@ -1,4 +1,4 @@
-h1 {
+h1.logo {
   font-size: 5rem;
   // margin-top: -20vh;
   margin-bottom: 2rem;
@@ -15,21 +15,5 @@ h1 {
 }
 
 .mainMenu {
-  width: 50vw;
-  height: 100vh;
-  max-width: 1000px;
-  color: theme.$light-clr-1;
-  margin-inline: auto;
-
-  div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    @include theme.checkered;
-
-    height: 100%;
-    clip-path: polygon(0 0, 100% 0, 70% 100%, 30% 100%);
-  }
+  @include theme.mainMenuContainer;
 }
