--- a/src/global/theme.scss
+++ b/src/global/theme.scss
@@ -152,6 +152,12 @@ button {
   font-size: 2.5rem;
   text-shadow: 0 0rem 1rem black;
   padding: 0.5rem;
+  height: auto;
+  word-spacing: -0.4rem;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
   &:hover {
     animation: shake 0.1s forwards;
@@ -170,6 +176,13 @@ button {
       animation: none;
     }
   }
+
+  &:focus {
+    background-color: $acc-clr-3;
+    border-radius: 1rem;
+    transform: scale(1.3);
+    transition: transform 0.05s;
+  }
 }
 
 @keyframes shake {
@@ -184,6 +197,7 @@ button {
   }
   100% {
     transform: rotate(0deg) scale(1.2);
+    color: $acc-clr-3;
   }
 }
 
@@ -194,9 +208,11 @@ button {
   }
   33% {
     transform: rotate(5deg) scale(1.5);
+    // color: $acc-clr-3;
   }
   66% {
     transform: rotate(-5deg) scale(1.5);
+    // color: $acc-clr-3;
   }
 }
 
