--- a/src/pages/MainMenu/OptionsMenu.module.scss
+++ b/src/pages/MainMenu/OptionsMenu.module.scss
@@ -1,4 +1,5 @@
 h1.heading {
+  color: theme.$light-clr-2;
   font-size: 5rem;
   // margin-top: -20vh;
   margin-bottom: 2rem;
@@ -8,6 +9,7 @@ h1.heading {
 }
 
 p.optionLabel {
+  color: theme.$light-clr-2;
   font-size: 2rem;
   margin-top: 1em;
   text-shadow: 0 0rem 0.6rem black;
