--- a/src/pages/Game/GameUI.module.scss
+++ b/src/pages/Game/GameUI.module.scss
@@ -74,6 +74,10 @@
   }
 }
 
+.barFull {
+  animation: barFull 0.5s infinite;
+}
+
 .upperRight {
   right: 0;
   top: 0;
@@ -93,5 +97,15 @@
   }
   15% {
     transform: scale(1.3);
+  }
+}
+
+@keyframes barFull {
+  0%,
+  100% {
+    background-color: theme.$acc-clr-3;
+  }
+  50% {
+    background-color: white;
   }
 }
