--- a/src/global/theme.scss
+++ b/src/global/theme.scss
@@ -42,10 +42,6 @@ $grid-scale: 65vmin;
   font-family: "ConcertOne", sans-serif;
 }
 
-body {
-  overflow: hidden;
-}
-
 @mixin checkered {
   background-color: $acc-clr-1;
   background-image: linear-gradient(
@@ -95,12 +91,18 @@ body {
   animation: stripeMovement 6s linear infinite;
 }
 
+body {
+  overflow: hidden;
+  @include movingStripes;
+}
+
 @mixin mainMenuContainer {
-  width: 60vmin;
+  width: max(60vmin, 60vw);
+  width: 60vw;
   height: 100vh;
   color: $light-clr-1;
   margin-inline: auto;
-  // max-width: 700px;
+  max-width: 800px;
 
   // @media (max-width: 575px) {
   //   max-width: 250px;
@@ -121,7 +123,7 @@ body {
   //   max-width: 700px;
   // }
 
-  div {
+  > div {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -220,11 +222,16 @@ button {
   animation: breathing 3s ease-out infinite;
 }
 
+@mixin barFull {
+  animation: barFull 0.5s infinite;
+}
+
 @mixin heading {
   color: $light-clr-2;
   font-size: 5rem;
   text-shadow: 0 0.3rem 0.6rem black;
   text-align: center;
+  padding-inline: 2rem;
 }
 
 @keyframes breathing {
@@ -241,7 +248,23 @@ button {
   }
 }
 
-@media (max-width: 575px) {
+@keyframes barFull {
+  0%,
+  100% {
+    background-color: $acc-clr-3;
+  }
+  50% {
+    background-color: white;
+  }
+}
+
+@media (max-width: 425px) {
+  html {
+    font-size: 8px; /* Reduce base size */
+  }
+}
+
+@media (min-width: 425px) {
   html {
     font-size: 10px; /* Reduce base size */
   }
@@ -276,3 +299,4 @@ button {
     font-size: 20px;
   }
 }
+
