--- a/src/pages/Game/GameUI.module.scss
+++ b/src/pages/Game/GameUI.module.scss
@@ -4,6 +4,10 @@
   position: absolute;
   z-index: theme.$z-ind-game-ui;
 }
+.touchArea {
+  width: 100%;
+  height: 100%;
+}
 
 .upperLeft,
 .upperRight,
@@ -12,6 +16,7 @@
   width: auto;
   position: absolute;
   padding: 1.2rem;
+  z-index: 1;
 }
 
 .upperLeft {
