--- a/src/global/theme.scss
+++ b/src/global/theme.scss
@@ -44,6 +44,7 @@ $grid-scale: 65vmin;
     auto;
 }
 
+// -------------------------------------------- MIXINS --------------------------------------------
 @mixin checkered {
   background-color: $acc-clr-1;
   background-image: linear-gradient(
@@ -93,11 +94,6 @@ $grid-scale: 65vmin;
   animation: stripeMovement 6s linear infinite;
 }
 
-body {
-  overflow: hidden;
-  @include movingStripes;
-}
-
 @mixin mainMenuContainer {
   width: max(60vmin, 60vw);
   width: 60vw;
@@ -139,13 +135,28 @@ body {
   }
 }
 
-@keyframes stripeMovement {
-  0% {
-    background-position: 0;
-  }
-  100% {
-    background-position: $stripe-scale * sqrt(8);
-  }
+@mixin breathing {
+  animation: breathing 3s ease-out infinite;
+}
+
+@mixin barFull {
+  animation: barFull 0.5s infinite;
+}
+
+@mixin heading {
+  color: $light-clr-2;
+  font-size: 5rem;
+  text-shadow: 0 0.3rem 0.6rem black;
+  text-align: center;
+  padding-inline: 2rem;
+  margin-top: -5vh;
+  // margin-top: -2rem;
+}
+
+// -------------------------------------------- GLOBAL TAG STYLES --------------------------------------------
+body {
+  overflow: hidden;
+  @include movingStripes;
 }
 
 button {
@@ -190,6 +201,16 @@ button {
   }
 }
 
+// -------------------------------------------- KEYFRAMES --------------------------------------------
+@keyframes stripeMovement {
+  0% {
+    background-position: 0;
+  }
+  100% {
+    background-position: $stripe-scale * sqrt(8);
+  }
+}
+
 @keyframes shake {
   0% {
     transform: rotate(0deg) scale(1);
@@ -221,22 +242,6 @@ button {
   }
 }
 
-@mixin breathing {
-  animation: breathing 3s ease-out infinite;
-}
-
-@mixin barFull {
-  animation: barFull 0.5s infinite;
-}
-
-@mixin heading {
-  color: $light-clr-2;
-  font-size: 5rem;
-  text-shadow: 0 0.3rem 0.6rem black;
-  text-align: center;
-  padding-inline: 2rem;
-}
-
 @keyframes breathing {
   0%,
   50%,
@@ -261,6 +266,7 @@ button {
   }
 }
 
+// -------------------------------------------- MEDIA QUERIES --------------------------------------------
 @media (max-width: 425px) {
   html {
     font-size: 8px;
@@ -272,12 +278,6 @@ button {
     font-size: 10px;
   }
 }
-
-// @media (min-width: 575px) {
-//   html {
-//     font-size: 10px;
-//   }
-// }
 
 @media (min-width: 768px) {
   html {
