--- a/src/features/menu/OptionsPage.module.scss
+++ b/src/features/menu/OptionsPage.module.scss
@@ -7,7 +7,8 @@ h1.heading {
 p.optionLabel {
   color: theme.$light-clr-2;
   font-size: 2rem;
-  margin-top: 2.5rem;
+  margin-top: 2.7rem;
+  margin-bottom: -0.2rem;
   text-shadow: 0 0rem 0.6rem black;
 }
 
@@ -17,7 +18,7 @@ button.optionButton {
 
 button.backButton {
   font-size: 2rem;
-  margin-top: 3rem;
+  margin-top: 4rem;
 }
 
 .optionsMenu {
