--- a/src/features/game/components/grid-cell/GridCell.module.scss
+++ b/src/features/game/components/grid-cell/GridCell.module.scss
@@ -20,3 +20,15 @@
   opacity: 1;
   transition: opacity 0.2s;
 }
+.potentialMove {
+  // Example styles to make it stand out
+  background-color: rgba(132, 255, 132, 0.5); /* A semi-transparent light green */
+  border: 2px solid #336633;
+  cursor: pointer;
+  box-shadow: 0 0 10px 2px rgba(50, 205, 50, 0.7); /* Green glow effect */
+  transition: all 0.2s ease-in-out;
+
+  &:hover {
+    transform: scale(1.1);
+  }
+}
